--- a/.github/workflows/test-build-and-release.yml
+++ b/.github/workflows/test-build-and-release.yml
@@ -16,6 +16,20 @@ jobs:
       - name: Testing with check
         run: |
           ./check_operations
+
+  lint:
+    name: Static Code Analysis
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install splint
+        run: |
+          sudo apt install splint
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Run splint
+        run: |
+          splint --compdef --exportlocal simplecalculator.c operations.c
+          
   building-and-delivery:
     name: Build and delivery
     permissions:
@@ -28,6 +42,8 @@ jobs:
       - name: Building
         run: |
           gcc operations.c simplecalculator.c -o simplecalculator
+          touch neptun.txt
+          echo "cax1rr" >> neptun.txt
       - name: Creating tar.gz
         run: |
           tar -czvf simplecalculator.tar.gz simplecalculator
@@ -38,3 +54,4 @@ jobs:
           title: "Development build"
           files: |
             simplecalculator.tar.gz
+            neptun.txt
